db documents get timestamp of file and timestamp when modified in db
updated test and version

--- a/docs/h5database/h5mongo.ipynb
+++ b/docs/h5database/h5mongo.ipynb
@@ -21,7 +21,11 @@
     "from pymongo import MongoClient\n",
     "\n",
     "from h5rdmtoolbox import tutorial\n",
-    "import h5rdmtoolbox as h5tbx"
+    "import h5rdmtoolbox as h5tbx\n",
+    "\n",
+    "from pprint import pprint\n",
+    "\n",
+    "h5tbx.__version__"
    ]
   },
   {
@@ -43,8 +47,7 @@
    "outputs": [],
    "source": [
     "db = client['h5database_notebook_tutorial']\n",
-    "collection = db['test']\n",
-    "collection.drop() # delete all entries if already exist"
+    "collection = db['test']"
    ]
   },
   {
@@ -94,83 +97,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c921c068-8649-4147-addd-2a1a10f7c2fc",
+   "metadata": {},
+   "source": [
+    "## Filling the database\n",
+    "\n",
+    "The accessor object `mongo` can be applied both on groups and datasets. If applied on groups, then two parameter values should be considered specifically:\n",
+    "- `recursive`: Whether to write all data of the group and below or not\n",
+    "- `flatten_tree`: The tree-structure can be flatten. Then there will be a DB entry per group and dataset. If False, then only one entry as a dictionary is written:\n",
+    "\n",
+    "We devide for `recursive=True` and check how the DB entries look different for `flatten_tree=True` and `flatten_tree=False`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "921d047f-6b02-4153-90e6-941165600dae",
-   "metadata": {
-    "tags": []
-   },
+   "id": "a2d48a6d-1d80-4dd9-b145-18004d61014f",
+   "metadata": {},
    "outputs": [],
    "source": [
+    "collection.drop() # delete all entries if already exist\n",
     "for fname in filenames:\n",
     "    with h5tbx.H5File(fname) as h5:\n",
-    "        h5.mongo.insert(collection=collection, recursive=True)"
+    "        h5.mongo.insert(collection=collection, recursive=True, flatten_tree=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "75ab4c31-b9bb-4c2a-84f2-8a3beb6bc1c2",
+   "id": "50a66fdc-adaf-4f61-93e7-3c72e38fd696",
    "metadata": {},
    "source": [
-    "Let's inspect the found database entries:"
+    "Let's inspect the first result:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f71aed4-eccb-444b-9a34-6bcebc489f32",
+   "metadata": {},
+   "source": [
+    "### Find all:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b3f259a-a4e2-4ef1-9710-8938d1b4c67b",
+   "id": "07927616-fcbf-4a65-adda-c608f4c3f8fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pprint import pprint"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c4e6c58-6f5f-4423-850b-92a6f32298b6",
-   "metadata": {},
-   "source": [
-    "Let's do the equivalent filter request as before (`sub_repo = repo.filter(Entry['/operation_point'].attrs['long_name'] == 'Operation point data group')`)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b405c1ad-7ee8-4087-afaf-5ffdcbea3503",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
     "res = collection.find({})\n",
-    "for r in res.rewind():\n",
+    "pprint(res.rewind()[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ca90f35-8ab7-426d-86d9-58504338f5da",
+   "metadata": {},
+   "source": [
+    "### Find inside a dictionary:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b94939f6-77bb-4ed5-8eaf-b4c784f1cd47",
+   "metadata": {},
+   "source": [
+    "The dictionary entry can be used for filter keyword, too:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99426a16-99ad-4f2f-ae9a-ea8f2a782700",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for r in collection.find({'meta.day': 'monday'}):\n",
     "    pprint(r)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f16bce3d-bb8d-4b1c-9f08-62b2b576bd0a",
+   "metadata": {},
+   "source": [
+    "### Filter for datetime:\n",
+    "Each entry has a `document_last_modified` (time when the document entry was last modified) and a `file_creation_time` (time when HDF file was created):"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dadf40c0-882d-406c-87fc-70b822d6fd21",
+   "id": "21435d7e-495b-45cb-922b-fdcd9876442f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "%%time\n",
-    "res = collection.find({'id': {\"$eq\": 1}})\n",
-    "for r in res.rewind():\n",
-    "    pprint(r)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11953685-71bf-44b1-ad9a-96fd6a72e195",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "res = collection.find({'company': \"shoeCompany\"})\n",
-    "for r in res.rewind():\n",
+    "import datetime\n",
+    "d = datetime.datetime.utcnow()- datetime.timedelta(hours=0, minutes=50)\n",
+    "print(d)\n",
+    "for r in collection.find({\"document_last_modified\": {\"$gt\": d}}).sort(\"username\"):\n",
     "    pprint(r)"
    ]
   },
@@ -179,7 +207,7 @@
    "id": "1438141f-3720-47d6-9ea6-c66172a2804c",
    "metadata": {},
    "source": [
-    "Number of found documents:"
+    "### Get the number of found documents:"
    ]
   },
   {
@@ -209,36 +237,6 @@
    "source": [
     "collection.count_documents({})"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a688e249-70ec-4670-a2eb-1fdb2b081c83",
-   "metadata": {},
-   "source": [
-    "You can also search for an entry within the meta-dictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaa1affc-b481-47eb-9774-db536c609e1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "res = collection.find({'meta.day': \"monday\"})\n",
-    "for r in res.rewind():\n",
-    "    pprint(r)\n",
-    "collection.count_documents({'meta.day': \"monday\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1016a14e-a76b-4ca4-80f8-29a34ff317e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
