--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "5beed51a-093a-4b79-b241-6f0e47e32a11",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-23T06:37:00.516265Z",
+     "iopub.status.busy": "2022-08-23T06:37:00.516265Z",
+     "iopub.status.idle": "2022-08-23T06:37:01.474776Z",
+     "shell.execute_reply": "2022-08-23T06:37:01.474776Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import h5rdmtoolbox as h5tbx"
@@ -27,20 +34,27 @@
    "id": "8c771d39-1ebc-4689-bbe4-17a5d139d87a",
    "metadata": {},
    "source": [
-    "The already implemented wrapper classes like e.g. `H5File` or `H5Flow` are already associated with layouts and we can called it directly from `H5File` as it is a property of the class:"
+    "The already implemented wrapper classes like e.g. `H5File` or `H5Flow` are already associated with pre-defined layouts that come with the package and we can called it directly from `H5File` as it is a property of the class:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "id": "4f3bf7f8-f8c4-4afe-bf7d-d44c3bb51804",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-23T06:37:01.474776Z",
+     "iopub.status.busy": "2022-08-23T06:37:01.474776Z",
+     "iopub.status.idle": "2022-08-23T06:37:01.506236Z",
+     "shell.execute_reply": "2022-08-23T06:37:01.506236Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<H5FileLayout with 0 issues>\n"
+      "<H5FileLayout with 1 issues>\n"
      ]
     }
    ],
@@ -55,14 +69,23 @@
    "id": "966ecf93-4ce4-4ed0-94a1-029b9344ddd8",
    "metadata": {},
    "source": [
-    "As a `layout` is a HDF file itself, it has similar features like wrapper files, e.g. we can get a nice html representation of the content. Like this we can see what is required to have in any file written with `H5File`:"
+    "As a `layout` is a HDF file itself, it has similar features like wrapper files, e.g. we can get a nice html representation of the content. Like this we can see what is required to have in any file written with `H5File`.\n",
+    "\n",
+    "Doing so, we directly see, that the layout **requires to have two attributes**, namely `__h5rdmtoobox_version__` and a `title`:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "id": "1b04b95b-ffd6-4f14-b820-9467b65b3c40",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-23T06:37:01.506236Z",
+     "iopub.status.busy": "2022-08-23T06:37:01.506236Z",
+     "iopub.status.idle": "2022-08-23T06:37:01.521861Z",
+     "shell.execute_reply": "2022-08-23T06:37:01.521861Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -272,19 +295,19 @@
        "\n",
        "          <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                <li>\n",
-       "                    <input id=\"group-ds-/-5369206700\" type=\"checkbox\" checked>\n",
-       "                    <label style=\"font-weight: bold\" for=\"group-ds-/-5369206700\">\n",
+       "                    <input id=\"group-ds-/-2727842200\" type=\"checkbox\" checked>\n",
+       "                    <label style=\"font-weight: bold\" for=\"group-ds-/-2727842200\">\n",
        "                    /<span>(0)</span></label>\n",
        "              \n",
        "\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : __version of this package</li><li style=\"list-style-type: none; font-style: italic\">creation_time : __time of file creation</li><li style=\"list-style-type: none; font-style: italic\">title : __file title</li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : __version of this package</li><li style=\"list-style-type: none; font-style: italic\">title : __file title</li>\n",
        "                </ul>\n",
        "</li>\n",
        "</ul>\n",
        "</div>"
       ],
       "text/plain": [
-       "<H5FileLayout with 0 issues>"
+       "<H5FileLayout with 1 issues>"
       ]
      },
      "execution_count": 3,
@@ -309,22 +332,27 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "a83cd128-d178-41e8-8337-ecd08931411a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-23T06:37:01.521861Z",
+     "iopub.status.busy": "2022-08-23T06:37:01.521861Z",
+     "iopub.status.idle": "2022-08-23T06:37:01.537574Z",
+     "shell.execute_reply": "2022-08-23T06:37:01.537574Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "run check\n",
-      "Attribute creation_time missing in group /\n",
       "Attribute title missing in group /\n",
       "\n",
       "run check again - different call\n",
-      "Attribute creation_time missing in group /\n",
       "Attribute title missing in group /\n",
       "\n",
       "repr of layout:\n",
-      "<H5FileLayout with 2 issues>\n"
+      "<H5FileLayout with 1 issues>\n"
      ]
     }
    ],
@@ -361,7 +389,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "e2ab957a-6584-4135-a602-7f48a67cc712",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-23T06:37:01.537574Z",
+     "iopub.status.busy": "2022-08-23T06:37:01.537574Z",
+     "iopub.status.idle": "2022-08-23T06:37:01.554157Z",
+     "shell.execute_reply": "2022-08-23T06:37:01.553150Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -565,14 +600,14 @@
        "    background-color: rgba(3, 169, 244, .2);\r\n",
        "    cursor: pointer;\r\n",
        "}</style></head>\n",
-       "<p>H5FileLayout File \"tmp1344\"</p>\n",
+       "<p>H5FileLayout File \"tmp2\"</p>\n",
        "\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "          <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                <li>\n",
-       "                    <input id=\"group-ds-/-5436702400\" type=\"checkbox\" checked>\n",
-       "                    <label style=\"font-weight: bold\" for=\"group-ds-/-5436702400\">\n",
+       "                    <input id=\"group-ds-/-2759108400\" type=\"checkbox\" checked>\n",
+       "                    <label style=\"font-weight: bold\" for=\"group-ds-/-2759108400\">\n",
        "                    /<span>(0)</span></label>\n",
        "              \n",
        "\n",
@@ -614,7 +649,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "1f0fd70f-1a8f-4074-9f1b-bb2b33c6ecf1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-23T06:37:01.554157Z",
+     "iopub.status.busy": "2022-08-23T06:37:01.554157Z",
+     "iopub.status.idle": "2022-08-23T06:37:01.569203Z",
+     "shell.execute_reply": "2022-08-23T06:37:01.569203Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -818,24 +860,24 @@
        "    background-color: rgba(3, 169, 244, .2);\r\n",
        "    cursor: pointer;\r\n",
        "}</style></head>\n",
-       "<p>H5FileLayout File \"tmp1344\"</p>\n",
+       "<p>H5FileLayout File \"tmp2\"</p>\n",
        "\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "          <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                <li>\n",
-       "                    <input id=\"group-ds-/-5447887700\" type=\"checkbox\" checked>\n",
-       "                    <label style=\"font-weight: bold\" for=\"group-ds-/-5447887700\">\n",
+       "                    <input id=\"group-ds-/-2775502500\" type=\"checkbox\" checked>\n",
+       "                    <label style=\"font-weight: bold\" for=\"group-ds-/-2775502500\">\n",
        "                    /<span>(3)</span></label>\n",
        "              \n",
        "\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">title : __any</li>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-5449177200\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/x-5449179800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <ul id=\"ds-1-/x-2776857900\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/x-2776862200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
        "                <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/x-5449179800\">x</label>\n",
+       "                    for=\"ds-2-/x-2776862200\">x</label>\n",
        "                <span class=\"h5tb-dims\">(1,)</span>  [\n",
        "                <span class=\"h5tb-unit\">N.A.</span>]\n",
        "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__ndim__ : 1</li><li style=\"list-style-type: none; font-style: italic\">__shape__ : [20]</li><li style=\"list-style-type: none; font-style: italic\">standard_name.alt:long_name : __any</li>\n",
@@ -845,10 +887,10 @@
        "             </ul>\n",
        "             \n",
        "\n",
-       "                <ul id=\"ds-1-/y-5449548100\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/y-5449550800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <ul id=\"ds-1-/y-2777348800\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/y-2777351500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
        "                <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/y-5449550800\">y</label>\n",
+       "                    for=\"ds-2-/y-2777351500\">y</label>\n",
        "                <span class=\"h5tb-dims\">(1,)</span>  [\n",
        "                <span class=\"h5tb-unit\">N.A.</span>]\n",
        "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name.alt:long_name : __any</li>\n",
@@ -860,8 +902,8 @@
        "\n",
        "          <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                <li>\n",
-       "                    <input id=\"group-ds-/meta-5449640900\" type=\"checkbox\" >\n",
-       "                    <label style=\"font-weight: bold\" for=\"group-ds-/meta-5449640900\">\n",
+       "                    <input id=\"group-ds-/meta-2777460200\" type=\"checkbox\" >\n",
+       "                    <label style=\"font-weight: bold\" for=\"group-ds-/meta-2777460200\">\n",
        "                    meta<span>(1)</span></label>\n",
        "              \n",
        "\n",
@@ -870,8 +912,8 @@
        "\n",
        "          <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                <li>\n",
-       "                    <input id=\"group-ds-/meta/other-5449753200\" type=\"checkbox\" >\n",
-       "                    <label style=\"font-weight: bold\" for=\"group-ds-/meta/other-5449753200\">\n",
+       "                    <input id=\"group-ds-/meta/other-2777622800\" type=\"checkbox\" >\n",
+       "                    <label style=\"font-weight: bold\" for=\"group-ds-/meta/other-2777622800\">\n",
        "                    other<span>(0)</span></label>\n",
        "              \n",
        "\n",
@@ -920,7 +962,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "fa3051b8-885b-4b7a-b4ac-58bb9dcb5594",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-23T06:37:01.569203Z",
+     "iopub.status.busy": "2022-08-23T06:37:01.569203Z",
+     "iopub.status.idle": "2022-08-23T06:37:01.584841Z",
+     "shell.execute_reply": "2022-08-23T06:37:01.584841Z"
+    }
+   },
    "outputs": [],
    "source": [
     "test_filename = h5tbx.generate_temporary_filename()\n",
@@ -944,13 +993,22 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "a93adb01-db25-40b4-8eac-649743a4758e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-23T06:37:01.584841Z",
+     "iopub.status.busy": "2022-08-23T06:37:01.584841Z",
+     "iopub.status.idle": "2022-08-23T06:37:01.600465Z",
+     "shell.execute_reply": "2022-08-23T06:37:01.600465Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Group name \"meta\" missing in /.\n"
+      "Group name \"meta\" missing in /.\n",
+      "Wrong shape of dataset /x: (20,) != (3,)\n",
+      "Neither of the attribute standard_name, long_name exist in /y\n"
      ]
     }
    ],
@@ -971,7 +1029,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "837d8626-4c09-4e4c-97fb-4c4ce874d71d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-23T06:37:01.600465Z",
+     "iopub.status.busy": "2022-08-23T06:37:01.600465Z",
+     "iopub.status.idle": "2022-08-23T06:37:01.616115Z",
+     "shell.execute_reply": "2022-08-23T06:37:01.616115Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1002,7 +1067,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "cb69b929-772d-4bfd-bced-c03ff2c296bb",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-23T06:37:01.616115Z",
+     "iopub.status.busy": "2022-08-23T06:37:01.616115Z",
+     "iopub.status.idle": "2022-08-23T06:37:01.631853Z",
+     "shell.execute_reply": "2022-08-23T06:37:01.631853Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1031,7 +1103,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "b3555548-8e48-4dd1-a31b-21add7a6172c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-23T06:37:01.631853Z",
+     "iopub.status.busy": "2022-08-23T06:37:01.631853Z",
+     "iopub.status.idle": "2022-08-23T06:37:01.647497Z",
+     "shell.execute_reply": "2022-08-23T06:37:01.647497Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
