--- a/docs/h5wrapper/GroupCreation.ipynb
+++ b/docs/h5wrapper/GroupCreation.ipynb
@@ -14,12 +14,7 @@
    "execution_count": 1,
    "id": "859f96b2-c712-418a-9104-b94bc3a7799d",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-12T14:11:18.925878Z",
-     "iopub.status.busy": "2022-08-12T14:11:18.925878Z",
-     "iopub.status.idle": "2022-08-12T14:11:20.616004Z",
-     "shell.execute_reply": "2022-08-12T14:11:20.616004Z"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -31,18 +26,70 @@
    "execution_count": 2,
    "id": "e05731c2-b266-4139-9bf7-4fe5d3354035",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-12T14:11:20.616004Z",
-     "iopub.status.busy": "2022-08-12T14:11:20.616004Z",
-     "iopub.status.idle": "2022-08-12T14:11:20.635750Z",
-     "shell.execute_reply": "2022-08-12T14:11:20.635750Z"
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp13\\tmp0.hdf\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.H5File() as h5:\n",
     "    h5.create_group('mygrp')\n",
-    "    h5.create_group('othergrp', long_name='my other group', attrs=dict(one=2, two='a second attr'))"
+    "    h5.create_group('othergrp', long_name='my other group', attrs=dict(one=2, two='a second attr'))\n",
+    "    print(h5.hdf_filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "656b228d-aacc-4e4c-b78a-a793e37d0fae",
+   "metadata": {},
+   "source": [
+    "## Group exploration\n",
+    "\n",
+    "Sometimes it is helpful to get all all groups of a current group:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ac44590c-f3e8-4913-bcf3-73f9cee6ba5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<HDF5 group \"/mygrp\" (0 members)>, <HDF5 group \"/othergrp\" (0 members)>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
+    "    print(h5.get_groups())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b9edd387-e3a2-49b9-b51d-cf1da347c803",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<HDF5 group \"/othergrp\" (0 members)>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
+    "    print(h5.get_groups(pattern='rgrp$'))"
    ]
   },
   {
@@ -64,25 +111,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "48caad4c-a49c-4907-a433-260ba4472fb5",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-12T14:11:20.635750Z",
-     "iopub.status.busy": "2022-08-12T14:11:20.635750Z",
-     "iopub.status.idle": "2022-08-12T14:11:20.656248Z",
-     "shell.execute_reply": "2022-08-12T14:11:20.656047Z"
-    }
+    "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Attribute creation_time missing in group /\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import h5py\n",
     "with h5py.File(h5tbx.generate_temporary_filename(suffix='.hdf'), 'w') as h5:\n",
