--- a/docs/howto/howto.ipynb
+++ b/docs/howto/howto.ipynb
@@ -23,9 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-23T09:00:05.292731Z",
+     "iopub.status.busy": "2022-08-23T09:00:05.292731Z",
+     "iopub.status.idle": "2022-08-23T09:00:06.156852Z",
+     "shell.execute_reply": "2022-08-23T09:00:06.156852Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "<class 'xarray.core.dataarray.DataArray'>\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "\n",
