more pymongo-style searches available
and version update

--- a/docs/h5wrapper/FileExploration.ipynb
+++ b/docs/h5wrapper/FileExploration.ipynb
@@ -7,20 +7,15 @@
    "source": [
     "# File exploration\n",
     "\n",
-    "To find data quickly or to collect certain objects the `h5RDMtoolbox` provides helpful methods:"
+    "To find data quickly or to collect certain objects the `h5RDMtoolbox` provides helpful methods. It follows mainly the `pymong`-syntax."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a3bc2c52-85e0-45bd-b2fd-1d7288637583",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:58.271266Z",
-     "iopub.status.busy": "2022-08-23T08:59:58.271266Z",
-     "iopub.status.idle": "2022-08-23T08:59:59.135466Z",
-     "shell.execute_reply": "2022-08-23T08:59:59.135466Z"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -37,24 +32,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "65294bdf-db4b-4edd-b069-5d6aa2a6110f",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:59.135466Z",
-     "iopub.status.busy": "2022-08-23T08:59:59.135466Z",
-     "iopub.status.idle": "2022-08-23T08:59:59.151054Z",
-     "shell.execute_reply": "2022-08-23T08:59:59.151054Z"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
     "with h5tbx.H5File() as h5:\n",
     "    h5.create_group('grp_1')\n",
     "    h5.create_group('grp_2', long_name='my other group', attrs=dict(one=2, two='a second attr'))\n",
-    "    h5.create_dataset('ds_1', shape=(2, 4), units='', long_name='dataset 1')\n",
-    "    h5.create_dataset('ds_2', shape=(2, 4), units='', long_name='dataset 2')\n",
-    "    h5.create_dataset('gr_1/ds_1', shape=(2, 4), units='', long_name='dataset 2')"
+    "    h5.create_dataset('ds_1', shape=(2, 4), units='', long_name='dataset 1', attrs=dict(mean=1.5))\n",
+    "    h5.create_dataset('ds_2', shape=(2, 4), units='', long_name='dataset 2', attrs=dict(mean=2.0))\n",
+    "    h5.create_dataset('gr_1/ds_1', shape=(2, 4), units='', long_name='dataset 2', attrs=dict(mean=1.5))\n",
+    "    filename = h5.hdf_filename"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42e3e8bd-851d-4092-825e-ac87e216983e",
+   "metadata": {},
+   "source": [
+    "## Find\n",
+    "Syntax follows `pymongo`-syntax but not all queries may be implemented. Currently available:<br>\n",
+    "\\\\$gt, \\\\$gte, \\\\$lt, \\\\$lte, \\\\$regex\n",
+    "\n",
+    "You can decide to find only one appearance (`find_one`) or to find all (`find`)."
    ]
   },
   {
@@ -62,177 +65,110 @@
    "id": "fd80e1af-0984-42c0-a4a2-3a9dffa8db01",
    "metadata": {},
    "source": [
-    "To get all groups in a current level, call `get_groups()`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "12c8d80a-6b96-480b-81a0-b02cf5a83dc7",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:59.151054Z",
-     "iopub.status.busy": "2022-08-23T08:59:59.151054Z",
-     "iopub.status.idle": "2022-08-23T08:59:59.166681Z",
-     "shell.execute_reply": "2022-08-23T08:59:59.166681Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<HDF5 group \"/gr_1\" (1 members)>, <HDF5 group \"/grp_1\" (0 members)>, <HDF5 group \"/grp_2\" (0 members)>]\n"
-     ]
-    }
-   ],
-   "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
-    "    print(h5.get_groups())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fe4610af-7017-4f21-bfc4-bb967a6906cb",
-   "metadata": {},
-   "source": [
-    "To get all groups with a specific pattern, provide a pattern string (uses package `re`):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "efed69b6-2aec-4317-a1f3-77b8823ef451",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:59.166681Z",
-     "iopub.status.busy": "2022-08-23T08:59:59.166681Z",
-     "iopub.status.idle": "2022-08-23T08:59:59.182307Z",
-     "shell.execute_reply": "2022-08-23T08:59:59.182307Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<HDF5 group \"/grp_1\" (0 members)>, <HDF5 group \"/grp_2\" (0 members)>]\n"
-     ]
-    }
-   ],
-   "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
-    "    print(h5.get_groups('^grp_[0-9]$'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f2b43bf1-4379-46c8-8faa-5d3e986b1b13",
-   "metadata": {},
-   "source": [
-    "Exact same thing work with datasets:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "17e8871b-f01a-4b77-8639-cf25e6806660",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:59.182307Z",
-     "iopub.status.busy": "2022-08-23T08:59:59.182307Z",
-     "iopub.status.idle": "2022-08-23T08:59:59.197939Z",
-     "shell.execute_reply": "2022-08-23T08:59:59.197939Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_2\": shape (2, 4), type \"<f4\">]\n"
-     ]
-    }
-   ],
-   "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
-    "    print(h5.get_datasets('^ds_[0-9]$'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f480d6ed-7be2-4314-bef4-b190067d7f69",
-   "metadata": {},
-   "source": [
-    "You can find datasets or groups by searching for specific attributes:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "16deae82-4144-4a0e-9b8f-760c1c8bd51e",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:59.197939Z",
-     "iopub.status.busy": "2022-08-23T08:59:59.197939Z",
-     "iopub.status.idle": "2022-08-23T08:59:59.213522Z",
-     "shell.execute_reply": "2022-08-23T08:59:59.213522Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n",
-      "[<HDF5 dataset \"ds_2\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
-     ]
-    }
-   ],
-   "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
-    "    print(h5.get_by_attribute('long_name', 'dataset 1', recursive=False))\n",
-    "    print(h5.get_by_attribute('long_name', 'dataset 2', recursive=True, h5type='dataset'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b36a8ca8-6883-41f5-af4b-b3750c4c8263",
-   "metadata": {},
-   "source": [
-    "If you specify the object type or directly call the respective method, you only get those objects returned:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "20332c64-d01b-464b-bdc9-11d3c0ceac88",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:59.213522Z",
-     "iopub.status.busy": "2022-08-23T08:59:59.213522Z",
-     "iopub.status.idle": "2022-08-23T08:59:59.229144Z",
-     "shell.execute_reply": "2022-08-23T08:59:59.229144Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<HDF5 dataset \"ds_2\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
-     ]
-    }
-   ],
-   "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
-    "    print(h5.get_datasets_by_attribute('long_name', 'dataset 2', recursive=True))"
+    "### Find all groups/datasets in a level (or recursive through the file):\n",
+    "Use key \"\\\\$group\" or \"\\\\$dataset\". If the value is an empty string, all groups/datasets are returned:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08c204ee-85cf-4db9-a7dd-0aa2c3f85bbc",
+   "id": "0f8f3a59-607a-4c83-ad58-5b5bb49eceac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    print(h5.find({'$group': ''}, rec=True))\n",
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    print(h5.find({'$dataset': ''}, rec=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48d74472-e2d9-42bb-9038-17a0aa8fab8b",
+   "metadata": {},
+   "source": [
+    "### Find **one** specific group/dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11c0fee6-cc3c-4875-9cde-8725ba3d7192",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    print(h5.find({'$group': 'grp_1'}, rec=True))\n",
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    print(h5.find({'$dataset': 'ds_1'}, rec=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "065600e9-68b4-43f6-93ee-1e179d549d1b",
+   "metadata": {},
+   "source": [
+    "using **regex**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7b77acb-9a7d-4cf1-9f51-cbbe7bdaeea7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    print(h5.find({'$group': 'grp_1'}, rec=True))\n",
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    print(h5.find({'$dataset': 'ds_1'}, rec=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64bd1a3b-dba1-4855-921c-7d5525076cf7",
+   "metadata": {},
+   "source": [
+    "### Find based on attributes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e909a0d-10d7-4cab-ae11-b52bfdbcf6ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    print(h5.find({'long_name': 'dataset 1'}, rec=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efdce770-e975-4896-b30b-a7242e955df8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    print(h5.find({'long_name': 'dataset 1'}, rec=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a614c10-a9bf-42be-ae7d-476aabba9463",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    print(h5.find({'mean': {'$gt': 1.}}, rec=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15a1a448-b3e1-4ddf-bf5e-d42344cb4a94",
    "metadata": {},
    "outputs": [],
    "source": []
