--- a/docs/h5wrapper/FileExploration.ipynb
+++ b/docs/h5wrapper/FileExploration.ipynb
@@ -12,9 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a3bc2c52-85e0-45bd-b2fd-1d7288637583",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-24T06:39:56.193999Z",
+     "iopub.status.busy": "2022-08-24T06:39:56.193999Z",
+     "iopub.status.idle": "2022-08-24T06:39:57.837534Z",
+     "shell.execute_reply": "2022-08-24T06:39:57.837534Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -32,9 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "65294bdf-db4b-4edd-b069-5d6aa2a6110f",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-24T06:39:57.839549Z",
+     "iopub.status.busy": "2022-08-24T06:39:57.839549Z",
+     "iopub.status.idle": "2022-08-24T06:39:57.869434Z",
+     "shell.execute_reply": "2022-08-24T06:39:57.869434Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -71,10 +83,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0f8f3a59-607a-4c83-ad58-5b5bb49eceac",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-24T06:39:57.869434Z",
+     "iopub.status.busy": "2022-08-24T06:39:57.869434Z",
+     "iopub.status.idle": "2022-08-24T06:39:57.925556Z",
+     "shell.execute_reply": "2022-08-24T06:39:57.925556Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<HDF5 group \"/gr_1\" (1 members)>, <HDF5 group \"/grp_1\" (0 members)>, <HDF5 group \"/grp_2\" (0 members)>]\n",
+      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_2\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print(h5.find({'$group': ''}, rec=True))\n",
@@ -92,10 +120,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "11c0fee6-cc3c-4875-9cde-8725ba3d7192",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-24T06:39:57.939586Z",
+     "iopub.status.busy": "2022-08-24T06:39:57.939586Z",
+     "iopub.status.idle": "2022-08-24T06:39:57.986395Z",
+     "shell.execute_reply": "2022-08-24T06:39:57.986395Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<HDF5 group \"/grp_1\" (0 members)>]\n",
+      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print(h5.find({'$group': 'grp_1'}, rec=True))\n",
@@ -113,10 +157,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c7b77acb-9a7d-4cf1-9f51-cbbe7bdaeea7",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-24T06:39:57.986395Z",
+     "iopub.status.busy": "2022-08-24T06:39:57.986395Z",
+     "iopub.status.idle": "2022-08-24T06:39:58.036306Z",
+     "shell.execute_reply": "2022-08-24T06:39:58.036306Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<HDF5 group \"/grp_1\" (0 members)>]\n",
+      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print(h5.find({'$group': 'grp_1'}, rec=True))\n",
@@ -134,10 +194,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5e909a0d-10d7-4cab-ae11-b52bfdbcf6ee",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-24T06:39:58.039870Z",
+     "iopub.status.busy": "2022-08-24T06:39:58.039870Z",
+     "iopub.status.idle": "2022-08-24T06:39:58.068117Z",
+     "shell.execute_reply": "2022-08-24T06:39:58.068117Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print(h5.find({'long_name': 'dataset 1'}, rec=True))"
@@ -145,10 +220,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "efdce770-e975-4896-b30b-a7242e955df8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-24T06:39:58.068117Z",
+     "iopub.status.busy": "2022-08-24T06:39:58.068117Z",
+     "iopub.status.idle": "2022-08-24T06:39:58.100126Z",
+     "shell.execute_reply": "2022-08-24T06:39:58.100126Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print(h5.find({'long_name': 'dataset 1'}, rec=True))"
@@ -156,10 +246,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3a614c10-a9bf-42be-ae7d-476aabba9463",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-24T06:39:58.100126Z",
+     "iopub.status.busy": "2022-08-24T06:39:58.100126Z",
+     "iopub.status.idle": "2022-08-24T06:39:58.132754Z",
+     "shell.execute_reply": "2022-08-24T06:39:58.132167Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_2\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print(h5.find({'mean': {'$gt': 1.}}, rec=True))"
