--- a/docs/h5wrapper/FileExploration.ipynb
+++ b/docs/h5wrapper/FileExploration.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# File exploration\n",
     "\n",
-    "To find data quickly or to collect certain objects the `h5RDMtoolbox` provides helpful methods. It follows mainly the `pymong`-syntax."
+    "To find data quickly or to collect certain objects the `h5RDMtoolbox` provides helpful methods. It follows mainly the `pymongo`-syntax."
    ]
   },
   {
@@ -16,10 +16,10 @@
    "id": "a3bc2c52-85e0-45bd-b2fd-1d7288637583",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-24T06:39:56.193999Z",
-     "iopub.status.busy": "2022-08-24T06:39:56.193999Z",
-     "iopub.status.idle": "2022-08-24T06:39:57.837534Z",
-     "shell.execute_reply": "2022-08-24T06:39:57.837534Z"
+     "iopub.execute_input": "2022-08-24T07:31:49.388469Z",
+     "iopub.status.busy": "2022-08-24T07:31:49.388469Z",
+     "iopub.status.idle": "2022-08-24T07:31:50.416127Z",
+     "shell.execute_reply": "2022-08-24T07:31:50.416127Z"
     },
     "tags": []
    },
@@ -42,10 +42,10 @@
    "id": "65294bdf-db4b-4edd-b069-5d6aa2a6110f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-24T06:39:57.839549Z",
-     "iopub.status.busy": "2022-08-24T06:39:57.839549Z",
-     "iopub.status.idle": "2022-08-24T06:39:57.869434Z",
-     "shell.execute_reply": "2022-08-24T06:39:57.869434Z"
+     "iopub.execute_input": "2022-08-24T07:31:50.416127Z",
+     "iopub.status.busy": "2022-08-24T07:31:50.416127Z",
+     "iopub.status.idle": "2022-08-24T07:31:50.435995Z",
+     "shell.execute_reply": "2022-08-24T07:31:50.435995Z"
     },
     "tags": []
    },
@@ -53,10 +53,14 @@
    "source": [
     "with h5tbx.H5File() as h5:\n",
     "    h5.create_group('grp_1')\n",
-    "    h5.create_group('grp_2', long_name='my other group', attrs=dict(one=2, two='a second attr'))\n",
-    "    h5.create_dataset('ds_1', shape=(2, 4), units='', long_name='dataset 1', attrs=dict(mean=1.5))\n",
-    "    h5.create_dataset('ds_2', shape=(2, 4), units='', long_name='dataset 2', attrs=dict(mean=2.0))\n",
-    "    h5.create_dataset('gr_1/ds_1', shape=(2, 4), units='', long_name='dataset 2', attrs=dict(mean=1.5))\n",
+    "    h5.create_group('grp_2', long_name='my other group',\n",
+    "                    attrs=dict(one=2, two='a second attr'))\n",
+    "    h5.create_dataset('ds_1', shape=(2, 4), units='', long_name='dataset 1',\n",
+    "                      attrs=dict(mean=1.5))\n",
+    "    h5.create_dataset('ds_2', shape=(2, 4), units='', long_name='dataset 2',\n",
+    "                      attrs=dict(mean=2.0))\n",
+    "    h5.create_dataset('gr_1/ds_1', shape=(2, 4), units='', long_name='dataset 2',\n",
+    "                      attrs=dict(mean=1.5))\n",
     "    filename = h5.hdf_filename"
    ]
   },
@@ -67,7 +71,7 @@
    "source": [
     "## Find\n",
     "Syntax follows `pymongo`-syntax but not all queries may be implemented. Currently available:<br>\n",
-    "\\\\$gt, \\\\$gte, \\\\$lt, \\\\$lte, \\\\$regex\n",
+    "$\\$$gt, $\\$$gte, $\\$$lt, $\\$$lte, $\\$$regex\n",
     "\n",
     "You can decide to find only one appearance (`find_one`) or to find all (`find`)."
    ]
@@ -78,7 +82,7 @@
    "metadata": {},
    "source": [
     "### Find all groups/datasets in a level (or recursive through the file):\n",
-    "Use key \"\\\\$group\" or \"\\\\$dataset\". If the value is an empty string, all groups/datasets are returned:"
+    "Use key \"$\\$$group\" or \"$\\$$dataset\". If the value is an empty string, all groups/datasets are returned:"
    ]
   },
   {
@@ -87,10 +91,10 @@
    "id": "0f8f3a59-607a-4c83-ad58-5b5bb49eceac",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-24T06:39:57.869434Z",
-     "iopub.status.busy": "2022-08-24T06:39:57.869434Z",
-     "iopub.status.idle": "2022-08-24T06:39:57.925556Z",
-     "shell.execute_reply": "2022-08-24T06:39:57.925556Z"
+     "iopub.execute_input": "2022-08-24T07:31:50.435995Z",
+     "iopub.status.busy": "2022-08-24T07:31:50.435995Z",
+     "iopub.status.idle": "2022-08-24T07:31:50.466998Z",
+     "shell.execute_reply": "2022-08-24T07:31:50.466998Z"
     }
    },
    "outputs": [
@@ -124,10 +128,10 @@
    "id": "11c0fee6-cc3c-4875-9cde-8725ba3d7192",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-24T06:39:57.939586Z",
-     "iopub.status.busy": "2022-08-24T06:39:57.939586Z",
-     "iopub.status.idle": "2022-08-24T06:39:57.986395Z",
-     "shell.execute_reply": "2022-08-24T06:39:57.986395Z"
+     "iopub.execute_input": "2022-08-24T07:31:50.471000Z",
+     "iopub.status.busy": "2022-08-24T07:31:50.471000Z",
+     "iopub.status.idle": "2022-08-24T07:31:50.498836Z",
+     "shell.execute_reply": "2022-08-24T07:31:50.498836Z"
     }
    },
    "outputs": [
@@ -152,7 +156,7 @@
    "id": "065600e9-68b4-43f6-93ee-1e179d549d1b",
    "metadata": {},
    "source": [
-    "using **regex**:"
+    "To use **regex** the value must be dict itself with key `$regex`:"
    ]
   },
   {
@@ -161,27 +165,28 @@
    "id": "c7b77acb-9a7d-4cf1-9f51-cbbe7bdaeea7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-24T06:39:57.986395Z",
-     "iopub.status.busy": "2022-08-24T06:39:57.986395Z",
-     "iopub.status.idle": "2022-08-24T06:39:58.036306Z",
-     "shell.execute_reply": "2022-08-24T06:39:58.036306Z"
-    }
+     "iopub.execute_input": "2022-08-24T07:31:50.498836Z",
+     "iopub.status.busy": "2022-08-24T07:31:50.498836Z",
+     "iopub.status.idle": "2022-08-24T07:31:50.515900Z",
+     "shell.execute_reply": "2022-08-24T07:31:50.514891Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<HDF5 group \"/grp_1\" (0 members)>]\n",
-      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
+      "[<HDF5 group \"/grp_1\" (0 members)>, <HDF5 group \"/grp_2\" (0 members)>]\n",
+      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_2\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
      ]
     }
    ],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
-    "    print(h5.find({'$group': 'grp_1'}, rec=True))\n",
+    "    print(h5.find({'$group': {'$regex': 'grp_[0-9]'}}, rec=True))\n",
     "with h5tbx.H5File(filename) as h5:\n",
-    "    print(h5.find({'$dataset': 'ds_1'}, rec=True))"
+    "    print(h5.find({'$dataset': {'$regex': 'ds_[0-9]'}}, rec=True))"
    ]
   },
   {
@@ -198,10 +203,10 @@
    "id": "5e909a0d-10d7-4cab-ae11-b52bfdbcf6ee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-24T06:39:58.039870Z",
-     "iopub.status.busy": "2022-08-24T06:39:58.039870Z",
-     "iopub.status.idle": "2022-08-24T06:39:58.068117Z",
-     "shell.execute_reply": "2022-08-24T06:39:58.068117Z"
+     "iopub.execute_input": "2022-08-24T07:31:50.515900Z",
+     "iopub.status.busy": "2022-08-24T07:31:50.515900Z",
+     "iopub.status.idle": "2022-08-24T07:31:50.530981Z",
+     "shell.execute_reply": "2022-08-24T07:31:50.530981Z"
     }
    },
    "outputs": [
@@ -224,10 +229,10 @@
    "id": "efdce770-e975-4896-b30b-a7242e955df8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-24T06:39:58.068117Z",
-     "iopub.status.busy": "2022-08-24T06:39:58.068117Z",
-     "iopub.status.idle": "2022-08-24T06:39:58.100126Z",
-     "shell.execute_reply": "2022-08-24T06:39:58.100126Z"
+     "iopub.execute_input": "2022-08-24T07:31:50.530981Z",
+     "iopub.status.busy": "2022-08-24T07:31:50.530981Z",
+     "iopub.status.idle": "2022-08-24T07:31:50.546815Z",
+     "shell.execute_reply": "2022-08-24T07:31:50.546815Z"
     }
    },
    "outputs": [
@@ -250,10 +255,10 @@
    "id": "3a614c10-a9bf-42be-ae7d-476aabba9463",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-24T06:39:58.100126Z",
-     "iopub.status.busy": "2022-08-24T06:39:58.100126Z",
-     "iopub.status.idle": "2022-08-24T06:39:58.132754Z",
-     "shell.execute_reply": "2022-08-24T06:39:58.132167Z"
+     "iopub.execute_input": "2022-08-24T07:31:50.550904Z",
+     "iopub.status.busy": "2022-08-24T07:31:50.546815Z",
+     "iopub.status.idle": "2022-08-24T07:31:50.566003Z",
+     "shell.execute_reply": "2022-08-24T07:31:50.566003Z"
     }
    },
    "outputs": [
